--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
+:root {
+   --width: 1920;
+   --height: 1080;
+}
+
+html,
 body {
+   width: 100%;
+   height: 100%
+}
+
+body {
+   position: relative;
+    margin: 0;
     background-color: #04040a;
     color: white;
  }
@@ -8,10 +21,11 @@ body {
     justify-content: center;
  }
  
- .window {
-    display: flex;
-    justify-content: center;
- }
+.GameWindow {
+   display: flex;
+   justify-content: center;
+   user-select: none;
+}
  
  .row {
     display: flex;
